--- a/assets/css/meditations.css
+++ b/assets/css/meditations.css
@@ -49,7 +49,7 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1em 0;
+    padding: 1em;
 }
 
 .logo {
